# MLOPS

./: .gitignore  EXPLANATION.md  README.md  main.py  pyproject.toml  requirements.txt  runml.py  uploadModel.py
ETL/: load.py  pipeline.py  pulldata.py  transform.py
ML/: dataFetch.py  eda.py  features.py  predict.py  run_training.py  train.py
dags/: StockEtlDag.py
