[project]
name = "mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.5",
    "apache-airflow>=2.8.0",
    "dotenv>=0.9.9",
    "pandas>=3.0.2",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "supabase>=2.29.0",
    "yfinance>=1.3.0",
]
